--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "enzyme": "^3.11.0",
     "expect": "^1.20.2",
     "isparta-loader": "^2.0.0",
-    "jsdom": "9.8.3",
+    "jsdom": "^25.0.1",
     "jsdom-global": "2.1.0",
     "mini-css-extract-plugin": "^2.9.2",
     "mocha": "^10.8.2",
