--- a/package.json
+++ b/package.json
@@ -43,24 +43,25 @@
   },
   "homepage": "https://github.com/react-csv/react-csv#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.18.2",
-    "babel-istanbul": "^0.12.2",
-    "babel-loader": "^9.2.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-2": "^7.0.0",
+    "@cfaester/enzyme-adapter-react-18": "^0.8.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-istanbul": "^7.0.0",
     "browserify": "^13.3.0",
     "console-info": "0.0.4",
     "coveralls": "^3.1.1",
     "css-loader": "^7.1.2",
     "documentation": "^14.0.3",
-    "enzyme": "^2.8.2",
+    "enzyme": "^3.11.0",
     "expect": "^1.20.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "isparta-loader": "^2.0.0",
-    "jsdom": "9.8.3",
+    "jsdom": "^25.0.1",
     "jsdom-global": "2.1.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "mocha": "^10.8.2",
     "mocha-lcov-reporter": "^1.2.0",
     "prop-types": "^15.5.8",
